--- a/_posts/2025-05-23-code-ads.md
+++ b/_posts/2025-05-23-code-ads.md
@@ -9,7 +9,7 @@ image-description: >
   Kotlin is a village in the administrative district of Gmina Kotlin, within Jarocin County, Greater Poland Voivodeship, in west-central Poland. By MOs810.
 image-source: https://commons.wikimedia.org/wiki/File:Kotlin_house.JPG
 ---
-Recently I was reading up on Kotlin Coroutine Continuation as I was looking into solving a bug that hit maximum recursion depth and was hoping that it would resolve the issue with continuation passing style.
+Recently I was reading up on [Kotlin Coroutine Continuation](https://www.baeldung.com/kotlin/coroutine-continuation) as I was looking into solving a bug that hit maximum recursion depth and was hoping that it would resolve the issue with continuation passing style.
 
 As I was reading, I encountered a portion that didn't make sense:
 
@@ -17,6 +17,6 @@ As I was reading, I encountered a portion that didn't make sense:
 | :-: |
 | It was 2am when I was reading it |
 
-Confused, I went to reread the previous section several times and decided to take a short break. When I came back, I noticed the ad buttons on the top right and realised what it was.
+Confused, I went to reread the previous sections several times and decided to take a short break. When I came back, I noticed the ad buttons on the top right and realised what it was.
 
 Remember that taking a break can give you a mental reset to have a fresh look at the problem again.
